# fastapi-project

./: .coverage  .gitignore  README.md  justfile  pyproject.toml
fastapi_duno/: app.py  database.py  models.py  schemas.py  security.py
migrations/: env.py
migrations/versions/: 6c27c4a714fb_inserted_updated_at_field_at_users_table.py  ea6f0261034c_create_users_table.py  f7735312b718_renamed_field_username_field_at_database.py
test/: test_app.py
tests/: conftest.py  test_app.py  test_db.py  test_security.py
