[project]
name = "fastapi-duno"
authors = [
  { name = 'João Pedro Silva', email = 'joaopedrosilvadelima@gmail.com' },
]
version = "0.1.0"
description = "A FastAPI project to govern them all"
readme = "README.md"
requires-python = ">=3.14"
dependencies = ["fastapi[standard]>=0.128.3"]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-cov>=7.0.0"]

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'
